Making ItemLoader more verbose